--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo">
-                <a href="#" Vishal><span>Vishal</span></a>
+                <a href="" ><span>Vishal</span></a>
             </div>
             <ul class="menu">
                 <li><a href="home.html">Home</a></li>
