--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </nav>
     <!--home section start-->
     <section class="home" id="home">
+        <h1>home</h1>
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
